force-app/main/default/objects/brand__c/brand__c.object-meta.xml
<CustomObject>
    <label>Brands</label>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>