force-app/main/default/objects/brand__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EUA</fullName>
                <default>true</default>
                <label>EUA</label>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>