force-app/main/default/objects/brand__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colección</fullName>
                <default>true</default>
                <label>Colección</label>
            </value>
            <value>
                <fullName>Deportivo</fullName>
            </value>
            <value>
                <fullName>Diario</fullName>
            </value>
            <value>
                <fullName>Todo Terreno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>